--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.12.15",
     "morgan": "^1.10.0",
     "nanoid": "^3.1.23",
+    "node-schedule": "^2.1.0",
     "xlsx": "^0.17.2"
   },
   "devDependencies": {
